# Turtle-Quant-1

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  README.md  pyproject.toml  ruff.toml  setup.py
.github/workflows/: dev-test.yaml  main-deploy.yaml  main-docs.yaml  test-build-deploy.yaml
docs/: optimization-v1.1.0.md  optimization-v1.2.0.md
notebooks/: backtesting_demo.ipynb  backtesting_demo.py  quantstats_demo.ipynb  snakeviz.ipynb
notebooks/backtesting/: main.ipynb
notebooks/strategies/: candlesticks_viz.ipynb  mean_reversion_viz.ipynb  momentum_viz-Copy1.ipynb  momentum_viz.ipynb  scipy_find_peaks_viz.ipynb  sup_res_viz.ipynb
src/turtle_quant_1/: config.py  logging.py
src/turtle_quant_1/backtesting/: engine.py  hyperparameters.py  main.py  models.py  portfolio.py  runner.py  viz.py
src/turtle_quant_1/data_processing/: base.py  datetimes.py  maintainer.py  processor.py
src/turtle_quant_1/data_processing/adapters/: alpha_vantage_fetcher.py  gcs_storage_adapter.py  yfinance_fetcher.py
src/turtle_quant_1/strategies/: __init__.py  base.py  engine.py
src/turtle_quant_1/strategies/candlesticks/: engulfing_pattern.py  momentum_pattern.py  multiple_pattern.py
src/turtle_quant_1/strategies/helpers/: candle_units.py  data_units.py  helpers.py  multiprocessing.py
src/turtle_quant_1/strategies/helpers/support_resistance/: base.py  stnry_fibonacci_retrace.py  stnry_gaussian_kde.py  stnry_local_extrema.py  stnry_pivot_point.py
src/turtle_quant_1/strategies/mean_reversion/: bollinger_band.py  fast_stoch_osc_crossover.py  mfi_divergence.py  roc_multi_condition_crossover.py  rsi_sup_res_divergence.py  slow_stoch_osc_crossover.py
src/turtle_quant_1/strategies/momentum/: moving_average_con_div.py  moving_average_crossover.py  relative_strength_index.py
src/turtle_quant_1/trading/: engine.py
terraform/: main.tf  p.tfvars.template  provider.tf  variables.tf
tests/: conftest.py
tests/data_processing/: test_data_fetcher.py  test_data_processor.py  test_data_storage.py
turtle_quant_1/: __init__.py  config.py
turtle_quant_1/backtesting/: __init__.py  engine.py  hyperparameters.py  main.py  models.py  portfolio.py  runner.py  test_runner.py
turtle_quant_1/data_processing/: __init__.py  alpha_vantage_fetcher.py  base.py  datetimes.py  gcs_storage_adapter.py  maintainer.py  processor.py  yfinance_fetcher.py
turtle_quant_1/data_processing/adapters/: alpha_vantage_fetcher.py  gcs_storage_adapter.py  yfinance_fetcher.py
turtle_quant_1/execution/: __init__.py
turtle_quant_1/server/: __init__.py  main.py
turtle_quant_1/strategies/: __init__.py  base.py  engine.py  helpers.py  linear_regression_strategy.py
turtle_quant_1/strategies/candlesticks/: __init__.py  engulfing_pattern.py  momentum_pattern.py  multiple_pattern.py
turtle_quant_1/strategies/helpers/: candle_units.py  data_units.py  helpers.py  multiprocessing.py
turtle_quant_1/strategies/helpers/support_resistance/: __init__.py  base.py  fibonacci_retrace_static.py  local_extrema_static.py  pivot_point.py  pivot_point_static.py  stnry_fibonacci_retrace.py  stnry_gaussian_kde.py  stnry_local_extrema.py  stnry_pivot_point.py
turtle_quant_1/strategies/mean_reversion/: __init__.py  bollinger_band.py  bollinger_band_strategy.py  fast_stoch_osc_crossover.py  mfi_divergence.py  roc_multi_condition_crossover.py  rsi_sup_res_divergence.py  slow_stoch_osc_crossover.py
turtle_quant_1/strategies/momentum/: __init__.py  linear_regression.py  linear_regression_strategy.py  moving_average_con_div.py  moving_average_crossover.py  moving_average_crossover_strategy.py  relative_strength_index.py  relative_strength_index_strategy.py
