[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "turtle-quant-1"
version = "0.1.0"
description = "All hail the turt."
authors = [
    { name = "Julian Wong", email = "julianwong2000@gmail.com" }
]
requires-python = ">= 3.12"
dependencies = [
    "alpha-vantage>=3.0.0",
    "fastapi[standard]>=0.116.1",
    "google-cloud-run>=0.10.17",
    "google-cloud-storage>=3.2.0",
    "holidays>=0.77",
    "numpy>=2.3.2",
    "pandas>=2.3.1",
    "pyarrow>=18.0.0",
    "pydantic>=2.11.7",
    "python-dotenv>=1.0.1",
    "scikit-learn>=1.3.0",
    "setuptools>=80.9.0",
    "uvicorn>=0.35.0",
    "yfinance>=0.2.65",
]

[dependency-groups]
backtest = [
    "optuna>=4.4.0",
    "quantstats>=0.0.68",
]
dev = [
    "pandas-stubs>=2.3.0.250703",
    "pre-commit>=4.2.0",
    "pyrefly>=0.26.0",
    "pytest>=7.2.0",
    "ruff>=0.11.1",
    "uv-sort==0.6.0",
]
notebook = [
    "ipykernel>=6.30.0",
    "ipython>=9.4.0",
    "jupyterlab>=4.4.5",
    "matplotlib>=3.10.3",
    "nbconvert>=7.16.6",
    "notebook>=7.4.4",
    "seaborn>=0.13.2",
    "voila>=0.5.8",
]

[tool.ruff]
exclude = [
    "build",
    "dist",
    "__pycache__",
    "*.ipynb"
]

[tool.pyrefly]
# Set the directory Pyrefly will search for files to type check
project-includes = ["turtle_quant_1/*"]
project-excludes = ["**/*venv/**/*"]

# Manually set the `sys.platform` Pyrefly will assume when type checking
python-platform = "linux"

# Return an import error when `<library>-stubs` can be imported, but no non-stubs version of that library can be found
ignore-missing-source = false

# A table mapping error codes to an `is-enabled` boolean
[errors]
# Disable `bad-assignment` errors
bad-assignment = false
# Disable `bad-return` errors
bad-return = false
